--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,14 @@ apply plugin: 'application'
 
 repositories {
   mavenCentral()
+  maven {
+  	url "http://repository.jetbrains.com/all"
+  }
 }
 
 dependencies {
   compile 'org.jetbrains.kotlin:kotlin-stdlib:1.0.0-beta-1038'
+  testCompile 'org.jetbrains.spek:spek:0.1.180'
 }
 
 version = versioning.info.full
@@ -33,4 +37,4 @@ license {
   }
 }
 
-mainClassName = 'de.voidnode.homebankCvsConverter.StarterKt'
+mainClassName = 'de.voidnode.homebankCvsConverter.Commerzbank2HomebankKt'
