--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ buildscript {
     classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.0-beta-1038'
   }
 }
-
 plugins {
   id "com.github.hierynomus.license" version "0.12.0";
   id 'net.nemerosa.versioning' version '1.5.0';
@@ -21,6 +20,8 @@ repositories {
   	url "http://repository.jetbrains.com/all"
   }
 }
+
+targetCompatibility = '1.8'
 
 dependencies {
   compile 'org.jetbrains.kotlin:kotlin-stdlib:1.0.0-beta-1038'
