--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.0-beta-1038'
+    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.6'
   }
 }
 plugins {
@@ -24,7 +24,7 @@ repositories {
 targetCompatibility = '1.8'
 
 dependencies {
-  compile 'org.jetbrains.kotlin:kotlin-stdlib:1.0.0-beta-1038'
+  compile 'org.jetbrains.kotlin:kotlin-stdlib:1.0.6'
   testCompile 'org.jetbrains.spek:spek:0.1.180'
 }
 
